# startstop_lambda

./: .gitignore  README.md  deploy.py  pyproject.toml
ec2startstop/: README.md  samconfig.toml  template.yaml
ec2startstop/src/: ec2start.py  ec2stop.py  instancesid.py  requirements.txt
ec2startstop/tests/unit/: test_ec2start.py  test_ec2stop.py
