[tool.poetry]
name = "startstop-lambda"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
skip = "^0.1.0"
aws-lambda-powertools = "^2.30.2"
boto3 = "^1.34.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
aws-sam-cli = "^1.105.0"
jmespath = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

